# GeneralVLA-2

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md
GeneralVLA/: README.md  chat.py  demo.py  pyproject.toml  requirements.txt  run_demo.sh
GeneralVLA/configs/: models.yaml  robot.yaml  runtime.yaml
GeneralVLA/evaltools/: README.md  eval.md  main.py  model_loader.py  prompt_const.py  run_eval.sh
GeneralVLA/scripts/: bootstrap.sh  download_assets.sh
GeneralVLA/src/robot_memory_vla/adapters/: generalvla_adapter.py  knowledge_bank_adapter.py  zeroshotpick_adapter.py
GeneralVLA/src/robot_memory_vla/app/: config.py  main.py  orchestrator.py
GeneralVLA/src/robot_memory_vla/memory/: store.py
GeneralVLA/src/robot_memory_vla/runtime/: logger.py  models.py  task_interpreter.py
GeneralVLA/tests/: test_cli_smoke.py  test_config.py  test_generalvla_adapter.py  test_memory_store.py  test_orchestrator.py  test_task_interpreter.py  test_zeroshotpick_adapter.py
GeneralVLA/utils/: grefcoco.py
GeoFuse-MV3D/: README.md  requirements.txt
GeoFuse-MV3D/configs/: gso30_objects.txt  method.yaml  paths.example.yaml
GeoFuse-MV3D/docs/: external_assets.md  method_note.md  overview.txt  reproduction.md
GeoFuse-MV3D/scripts/: blend_sameindex_geometry.py  evaluate_gso30_four_metrics.py  optimize_gaussian_axis_refine_meshsync.py  run_full_pipeline.py  soft_visual_hull_refine.py
GeoFuse-MV3D/tests/: test_blend_sameindex_geometry.py  test_soft_visual_hull.py
KnowledgeBank/: .gitignore  CONTRIBUTING.md  README.md
KnowledgeBank/SWE-Bench/: analyze_memory_health.py  run.sh  (+8 more)
(+7 files in other folders)
