[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-memory-vla"
version = "0.1.0"
description = "Single-turn robot memory + VLA orchestrator"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
robot-memory-vla = "robot_memory_vla.app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
